fixed overflow

--- a/css/projects.css
+++ b/css/projects.css
@@ -53,13 +53,6 @@
     transform: scale(1.15);
 }
 
-.cloud button {
-    transform: scale(29);
-    margin-top: 40px;
-    margin-left: 40px;
-    opacity: 1;
-}
-
 title { /* not even sure what this is for */
     font-family: Georgia, serif;
 }
@@ -126,12 +119,18 @@ h2 {
     z-index: -1;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .project-item {
     display: flex; 
     flex-wrap: wrap;
     border-radius: 10px;
     margin-left: 5px;
     flex-direction: row;
+    justify-content: center;
 }
 
 .projectpara {
@@ -163,6 +162,7 @@ h2 {
     height: 40px;
     font-size: 20px;
     border-radius: 20px;
+    text-align: center;
     transition: all 0.2s ease-in-out;
 }
 
@@ -282,9 +282,5 @@ h2 {
         left: 30%;
         margin: 0;
         margin-bottom: 80px;
-    }
-    
-    .cloud button {
-        width: 5%;
     }
 }
